@@ -334,6 +334,7 @@ its ending value.
   (1..2)  # includes its ending value
   (1...2) # excludes its ending value
   (1..)   # endless range, representing infinite sequence from 1 to Infinity
+  (..1)   # beginless range, representing infinite sequence from -Infinity to 1
 
 You may create a range of any object.  See the Range documentation for details
 on the methods you need to implement.
