@@ -43,9 +43,25 @@ describe "Range.new" do
     end
   end
 
-  describe "endless range" do
-    it "does not allow range without left boundary" do
-      -> { Range.new(nil, 1) }.should raise_error(ArgumentError, /bad value for range/)
+  describe "beginless/endless range" do
+    ruby_version_is ""..."2.7" do
+      it "does not allow range without left boundary" do
+        -> { Range.new(nil, 1) }.should raise_error(ArgumentError, /bad value for range/)
+      end
+    end
+
+    ruby_version_is "2.7" do
+      it "allows beginless left boundary" do
+        range = Range.new(nil, 1)
+        range.begin.should == nil
+      end
+
+      it "distinguishes ranges with included and excluded right boundary" do
+        range_exclude = Range.new(nil, 1, true)
+        range_include = Range.new(nil, 1, false)
+
+        range_exclude.should_not == range_include
+      end
     end
 
     ruby_version_is ""..."2.6" do
