@@ -28,6 +28,12 @@ sufficient information, see the ChangeLog file or Redmine
 * Numbered parameter as the default block parameter is introduced as an
   experimental feature.  [Feature #4475]
 
+* A beginless range is experimentally introduced.  It might not be as useful
+  as an endless range, but would be good for DSL purpose.
+
+     ary[..3]  # identical to ary[0..3]
+     where(sales: ..100)
+
 === Core classes updates (outstanding ones only)
 
 Enumerable::
